frontend/test/should_pass/computations_visited.grg
some(n:Node) : int
{
	def var id:int = valloc();
	vfree(id);
	id = valloc();
	n.visited[id] = !n.visited[id];
	vreset(id);
	vfreenonreset(id);
	return(id);
}

rule r() : (int)
{
	n:Node;
	
	modify {
		def var res:int;
		
		eval { 
			def var id:int = valloc();
			vfree(id);
			id = valloc();
			n.visited[id] = !n.visited[id];
			vreset(id);
			vfreenonreset(id);
		}
		
		return(some(n));
	}
}
