frontend/test/should_fail/computations_no_assign_func3.grg
using computations_no_assign_func3;

function bar(n:N) : boolean
{
	n.visited[0] = true;
	return(n.visited[0]);
}
